# rplc

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
src/rplc/lib/: config.py  discovery.py  domain.py  mirror.py
tests/: conftest.py
tests/lib/: test_config.py  test_config_env_vars.py  test_discovery.py  test_mirror.py
tests/resources/: sample.md
tests/resources/scratchdir/: some.txt
thoughts/investigations/: hexagonal-refactoring.md
